--- a/src/data/templates.yaml
+++ b/src/data/templates.yaml
@@ -1,5 +1,7 @@
 - id: simple
   name: Semplice
+  emoji: "📝"
+  active: false
   template: |
     {title}
 
@@ -9,6 +11,8 @@
 
 - id: formal
   name: Formale
+  emoji: "🤝"
+  active: false
   template: |
     Ho trovato questo contenuto interessante:
 
@@ -20,12 +24,28 @@
 
 - id: brief
   name: Breve
+  emoji: "⚡"
+  active: false
   template: "{title} - {url}"
 
 - id: movies-filtered
-  name: Film Filtrati
+  name: Film
+  emoji: "🎬"
+  active: true
   template: |
     Prendi i titoli di film/serie da questo URL: {url}.
-    Filtra solo quelli presenti su Amazon Prime Video o Netflix.
+    Filtra solo quelli presenti su Amazon Prime Video o Netflix (non altre piattaforme).
     Per ciascuno: trova il voto IMDb e restituisci un elenco puntato in questa forma:
     • Piattaforma – Voto – Titolo
+    Ordina la lista in ordine decrescente di voto IMDb.
+
+- id: telegram
+  name: Telegram
+  emoji: "📱"
+  active: true
+  template: |
+    Analizza il contenuto della pagina a questo URL: {url}.
+    Sintetizza i concetti principali in italiano per un messaggio Telegram.
+    Proponi un titolo originale in italiano (non tradotto).
+    Scrivi una sintesi breve, usando markdown (**grassetto** per punti chiave, emoji dove rilevanti, `code` per termini tecnici).
+    Stampa l'URL come ultima riga.
