Add generic summary template and enforce Italian outputs

--- a/src/data/templates.yaml
+++ b/src/data/templates.yaml
@@ -1,33 +1,3 @@
-- id: simple
-  name: Semplice
-  emoji: "📝"
-  active: false
-  template: |
-    {title}
-
-    {text}
-
-    {url}
-
-- id: formal
-  name: Formale
-  emoji: "🤝"
-  active: false
-  template: |
-    Ho trovato questo contenuto interessante:
-
-    "{title}"
-
-    {text}
-
-    Maggiori informazioni: {url}
-
-- id: brief
-  name: Breve
-  emoji: "⚡"
-  active: false
-  template: "{title} - {url}"
-
 - id: movies-filtered
   name: Film
   emoji: "🎬"
@@ -53,6 +23,22 @@
     - Tono conversazionale, no formalismi
 
     Scrivi tutto in UN UNICO BLOCCO, senza numerazioni.
+    Output interamente in italiano.
+
+- id: generic-summary
+  name: Riassunto generico
+  emoji: "🧾"
+  active: true
+  template: |
+    Leggi il contenuto da questo URL: {url}
+
+    Scrivi un riassunto strutturato in italiano che includa:
+    1. 3-5 frasi con l'idea principale e il contesto
+    2. Un elenco puntato con i 3 takeaway essenziali
+    3. Una frase finale che spiega a chi è utile il contenuto
+
+    Usa un tono chiaro e sintetico, senza copiare parti testuali pari pari.
+    Cita il link originale nell'ultima riga come "Fonte: {url}".
 
 - id: open-data-analysis
   name: Dati aperti
@@ -111,17 +97,18 @@
   template: |
     Leggi il contenuto da questo URL: {url}
 
-    Crea un thread Twitter (5-7 tweet) che sintetizza le idee principali:
+    Crea un thread Twitter adeguato a descrivere i punti più importanti:
 
-    1. **Tweet 1 (Hook)**: titolo accattivante + domanda che cattura attenzione
-    2. **Tweet 2-5**: sviluppa idee principali (uno per tweet)
+    1. **Tweet iniziale (Hook)**: titolo accattivante + domanda che cattura attenzione
+    2. **Tweet successivi**: sviluppa idee principali (uno per tweet)
        - Usa **grassetto** per concetti chiave
        - Aggiungi emoji rilevanti
        - Mantieni tono conversazionale
     3. **Tweet finale**: call-to-action (leggi l'articolo, condividi, replica)
 
-    Numera i tweet: 1/7, 2/7, ecc.
+    Numera i tweet nel formato 1/n, 2/n, ecc.
     Rendi il thread autonomo (no necessità di leggere articolo per capire).
+    Scrivi il thread interamente in italiano.
 
 - id: fact-check
   name: Fact-Check
