Modifica il testo di riflessione personale nei template per utilizzare la prima persona

--- a/src/data/templates.yaml
+++ b/src/data/templates.yaml
@@ -529,7 +529,7 @@
 
     5. Riflessione personale
     Chiudi con uno sguardo soggettivo: che effetto fa questa lettura?
-    Come potrebbe cambiare il tuo modo di lavorare, organizzarti o pensare?
+    Come potrebbe cambiare il mio modo di lavorare, organizzarmi o pensare?
 
     Cita la fonte originale nell’ultima riga come:
     Fonte: {url}
@@ -574,7 +574,7 @@
 
     5. Personal reflection
     Close with a subjective view: what effect does this reading have?
-    How could it change your way of working, organizing yourself, or thinking?
+    How could it change my way of working, organizing myself, or thinking?
 
     Cite the original source in the last line as:
     Source: {url}
