--- a/src/data/templates.yaml
+++ b/src/data/templates.yaml
@@ -44,15 +44,13 @@
   template: |
     Leggi questo URL: {url}
 
-    Sintetizza in max 560 caratteri (lunghezza di 2 tweet):
-    - Titolo accattivante + idea principale
-    - Emoji e **grassetto** per enfasi
-    - URL come ultima riga
-    - Tono conversazionale, no formalismi
+    Sintetizza in massimo 560 caratteri complessivi:
+    - Paragrafo 1: titolo accattivante + idea principale
+    - Paragrafo 2: invito alla conversazione + URL finale
 
-    Scrivi tutto in UN UNICO BLOCCO, senza numerazioni.
+    Inserisci emoji e **grassetto** dove servono, mantieni un tono conversazionale e privo di formalismi.
+    Scrivi esattamente questi due paragrafi consecutivi, separati da una riga vuota, senza elenchi né numerazioni.
     Usa un tono amichevole ma informativo.
-    Dividi l'output in 2 paragrafi separati da una riga vuota.
     Scrivi tutto in italiano.
 
 - id: chat-en
@@ -65,15 +63,13 @@
   template: |
     Read this URL: {url}
 
-    Summarize in max 560 characters (2 tweets length):
-    - Catchy title + main idea
-    - Emoji and **bold** for emphasis
-    - URL as last line
-    - Conversational tone, no formalities
+    Summarize in at most 560 total characters:
+    - Paragraph 1: catchy title + main idea
+    - Paragraph 2: conversation starter + final URL
 
-    Write everything in ONE BLOCK, without numbering.
+    Add emoji and **bold** where useful, keep the tone conversational and informal.
+    Write exactly these two consecutive paragraphs, separated by a blank line, with no lists or numbering.
     Use a friendly but informative tone.
-    Divide the output into 2 paragraphs separated by a blank line.
 
 - id: twitter-thread
   name: Thread Twitter
@@ -139,6 +135,7 @@
     2. **Per ogni claim**:
        - Valuta il livello di evidenza (verifiable from URL source? Cita ricerche/dati?)
        - Verifica coerenza con fonti pubbliche affidabili (ISTAT, ricerche peer-review, organismi ufficiali)
+       - Cita almeno una fonte esterna nel formato "Fonte: Nome – URL"; se manca una fonte affidabile indica "Fonte mancante"
        - Segnala se claim è opinione mascherata da fatto
 
     3. **Identifica red flags**:
@@ -194,6 +191,7 @@
     7. **Domande di riflessione**: 3-5 domande che stimolano pensiero critico e approfondimento successivo
 
     Sii esaustivo ma organizzato. Output in italiano.
+    Chiudi con una riga finale: "Fonte: {url}".
 
 - id: seo-brief
   name: SEO Brief
@@ -205,7 +203,7 @@
   template: |
     Analizza questo URL: {url}
 
-    Crea un SEO brief strutturato:
+    Crea un SEO brief strutturato e presenta l'output in 5 sezioni numerate (1-5) con intestazioni in **grassetto**:
 
     1. **Topic principale**: identifica l'argomento primario della pagina
     2. **Keywords primarie e secondarie**: estrai le keyword più rilevanti (presenti nel titolo, headings, prime righe)
@@ -264,6 +262,8 @@
     1. Cerca su IMDb
     2. Recupera il voto IMDb
     3. Identifica la piattaforma di streaming disponibile (Netflix, Prime Video, Disney+, ecc.)
+       - Se trovi più piattaforme, elencane al massimo due (le principali)
+       - Se non trovi piattaforme indicate "Non disponibile"
 
     Restituisci un elenco puntato in questa forma:
     - Piattaforma, Titolo, Voto
@@ -283,6 +283,8 @@
     1. Search on IMDb
     2. Get the IMDb rating
     3. Identify the available streaming platform (Netflix, Prime Video, Disney+, etc.)
+       - If multiple platforms exist, list at most the top two
+       - If none are available, write "Not available"
 
     Return a bulleted list in this format:
     - Platform, Title, Rating
@@ -303,7 +305,7 @@
 
     1. **Identifica tipo di prodotto/contenuto**: determina se si tratta di libro, film, serie TV, album musicale, videogioco, dispositivo elettronico, software, app, ristorante, hotel, corso online, o altro
 
-    2. **Cerca recensioni aggregate**: consulta i siti di recensioni più autorevoli per quella categoria:
+    2. **Cerca recensioni aggregate**: consulta fino a 3 fonti pertinenti tra i siti più autorevoli per quella categoria (se non trovi dati indica "Dati non disponibili"):
        - Libri: Goodreads, Amazon, Anobii
        - Film/Serie: IMDb, Rotten Tomatoes, Metacritic, FilmTV
        - Musica: AllMusic, Pitchfork, Metacritic
@@ -318,6 +320,7 @@
        - **Range di voti raccolti**: [min - max]
        - **Numero di recensioni totali**: [somma tra tutte le fonti]
        - **Distribuzione**: [es. "80% positive, 15% miste, 5% negative"]
+       - Se alcuni dati non sono disponibili, dichiaralo esplicitamente
 
     4. **Criterio di aggregazione**:
        - Spiega come hai calcolato la valutazione finale (media ponderata? mediana? consensus critica vs pubblico?)
@@ -345,7 +348,7 @@
 
     1. **Identify product/content type**: determine if it's a book, movie, TV series, music album, video game, electronic device, software, app, restaurant, hotel, online course, or other
 
-    2. **Search for aggregated reviews**: consult the most authoritative review sites for that category:
+    2. **Search for aggregated reviews**: consult up to 3 relevant sources among the authoritative review sites for that category (if no data exists, state "Data not available"):
        - Books: Goodreads, Amazon, LibraryThing
        - Movies/Series: IMDb, Rotten Tomatoes, Metacritic
        - Music: AllMusic, Pitchfork, Metacritic
@@ -360,6 +363,7 @@
        - **Vote range collected**: [min - max]
        - **Total number of reviews**: [sum across all sources]
        - **Distribution**: [e.g., "80% positive, 15% mixed, 5% negative"]
+       - If any figures are missing, state it clearly
 
     4. **Aggregation criterion**:
        - Explain how you calculated the final rating (weighted average? median? critics vs. public consensus?)
@@ -513,15 +517,11 @@
     Indica anche eventuali limiti o rischi se applicato male.
 
     3. Mettere in pratica
-    Proponi come sperimentare concretamente l’idea nel mondo reale.
-
-    Dove o in quale progetto si può testare.
-
-    È già deployato da qualche parte? Se sì, descrivi come.
-
-    Che tipo di azione o osservazione serve per verificarla.
-
-    Cosa si può imparare dal tentativo, anche se non riesce subito.
+    Proponi come sperimentare concretamente l’idea nel mondo reale, specificando:
+       - Dove o in quale progetto si può testare
+       - Se esistono già deploy o implementazioni reali e come funzionano
+       - Quali azioni/osservazioni servono per verificarla
+       - Cosa si può imparare dal tentativo, anche se non riesce subito
 
     4. Collegamenti e prospettive
     Mostra come il testo si collega ad altre teorie, pratiche o esperienze note.
@@ -558,15 +558,11 @@
     Also point out any limits or risks if applied poorly.
 
     3. Put it into practice
-    Suggest how to experiment with the idea concretely in the real world.
-
-    Where or in which project it can be tested.
-
-    Is it already deployed anywhere? If so, describe how.
-
-    What actions or observations are needed to validate it.
-
-    What can be learned from the attempt, even if it doesn’t succeed immediately.
+    Suggest how to experiment with the idea in the real world, specifying:
+       - Where or which project could host the experiment
+       - Whether it is already deployed somewhere and how
+       - Which actions or observations are needed to validate it
+       - What can be learned even if the first attempt fails
 
     4. Connections and perspectives
     Show how the text connects to other known theories, practices, or experiences.
